# Iterative_Closest_Point_-ICP-_width_kd-tree

./: CMakeLists.txt  README.md  package.xml
apps/: align.cpp  align_rotated_src.cpp  icp_from_pc.cpp  icp_from_pc_convergence.cpp  icp_test.cpp  kdtree_from_pc.cpp  kdtree_test.cpp  pc_conversion_test.cpp
data/: cloud_0.pcd  cloud_1.pcd  cloud_2.pcd  cloud_3.pcd  cloud_4.pcd  cloud_5.pcd  cloud_6.pcd  cloud_7.pcd  cloud_8.pcd  cloud_9.pcd
data/pseudo_LiDAR/: 0.pcd  1.pcd
data/pseudo_LiDAR_move/: 0.pcd  1.pcd  10.pcd  11.pcd  2.pcd  3.pcd  4.pcd  5.pcd  7.pcd  8.pcd  9.pcd
data/pseudo_LiDAR_pan/: 0.pcd  1.pcd  10.pcd  11.pcd  12.pcd  13.pcd  2.pcd  3.pcd  4.pcd  5.pcd  6.pcd  7.pcd  8.pcd  9.pcd
data/pseudo_LiDAR_rotation/: 0.pcd  1.pcd  10.pcd  11.pcd  12.pcd  13.pcd  2.pcd  3.pcd  4.pcd  5.pcd  6.pcd  7.pcd  8.pcd  9.pcd
include/: icp.h  kdtree.h
include/del_Eigen/src/Core/util/: Macros.h
src/: icp.cpp  kdtree.cpp
