<?xml version="1.0"?>
<package format="2">
  <name>scan_matcher</name>
  <version>0.0.0</version>
  <description></description>

  <maintainer email="thoropstrup@gmail.com">Thor Kamp Opstrup</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>std_msgs</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
